--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@microsoft/signalr": "^7.0.4",
+    "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "jest-editor-support": "*",
     "rxjs": "~7.8.0",
