--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "jest-editor-support": "*",
     "rxjs": "~7.8.0",
+    "tough-cookie": "^4.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
