--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@microsoft/signalr": "^7.0.4",
-    "@popperjs/core": "^2.11.7",
-    "bootstrap": "^5.2.3",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.3.0",
     "jest-editor-support": "*",
     "rxjs": "~7.8.0",
     "tough-cookie": "^4.1.3",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/bootstrap": "^5.2.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
